--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -11,6 +11,7 @@
 - [53. 最大子序和 *](#53-最大子序和-)
 - [198. 打家劫舍](#198-打家劫舍)
 - [213. 打家劫舍 II](#213-打家劫舍-ii)
+- [337. 打家劫舍 III](#337-打家劫舍-iii)
 - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
 - [45. 跳跃游戏 II  [贪心]](#45-跳跃游戏-ii--贪心)
 - [62. 不同路径 [Medium]](#62-不同路径-medium)
@@ -449,6 +450,40 @@ public:
             pre = tmp;
         }
         return cur;
+    }
+};
+```
+### 337. 打家劫舍 III 
+> 各个房屋形成二叉树，地区只有一个入口， 即根节点
+
+- **结合二叉树遍历的动态规划**
+- dp状态定义： 
+  - dp[i][0]: 表示当前点不偷的最大收益， 
+  - dp[i][1]: 表示当前点偷的最大收益
+- 在树结构下的，**状态转移考虑根节点与左右子树的关系**：
+  - 当前root节点： `dp[r][0] = max(dp[left][0], dp[left][1]) + max(dp[right][0], dp[right][1])`
+  - `dp[r][1] = root -> val +  dp[right][0] + dp[left][0])`
+- 根据问题定义，整个遍历应该采用自底而上的方式，即后序遍历
+- 时间复杂度 O(N) (后序遍历的时间) 空间复杂度 O(N)
+```
+class Solution {
+public:
+    struct Choice{
+        int notSelect;
+        int selected;
+    };
+
+    Choice _rob(TreeNode* root) {
+         if (!root) return {0, 0};
+        Choice l = _rob(root -> left);
+        Choice r = _rob(root -> right);
+        int notSelect = max(l.notSelect, l.selected) + max(r.notSelect, r.selected);
+        int selected = root -> val + l.notSelect + r.notSelect;
+        return {notSelect, selected};
+    }
+    int rob(TreeNode* root) {
+        Choice res = _rob(root);
+        return max(res.notSelect, res.selected);
     }
 };
 ```
