--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -12,7 +12,8 @@
   - [344.反转字符串](#344反转字符串)
   - [151. 翻转字符串的单词](#151-翻转字符串的单词)
   - [387. 字符串中的唯一字符](#387-字符串中的唯一字符)
-  - [字符的有效异位符](#字符的有效异位符)
+  - [49. 字母异位词组合](#49-字母异位词组合)
+  - [242. 有效的字母异位词](#242-有效的字母异位词)
 - [回文串](#回文串)
   - [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
   - [125. 回文串验证](#125-回文串验证)
@@ -20,15 +21,14 @@
 - [字符串转换问题](#字符串转换问题)
   - [8.字符串转换整数 (atoi) Mid](#8字符串转换整数-atoi-mid)
   - [8. 实现strStr() 子串匹配查找 ***](#8-实现strstr-子串匹配查找-)
-  - [49. 字母异位词组合](#49-字母异位词组合)
-  - [3. 无重复字符的最长子串 [Medium] [Tencent]](#3-无重复字符的最长子串-medium-tencent)
+  - [3. 无重复字符的最长子串 * [Medium] [Tencent/字节]](#3-无重复字符的最长子串--medium-tencent字节)
+  - [32. 最长有效括号](#32-最长有效括号)
   - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
   - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
   - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
   - [补充. 01串问题](#补充-01串问题)
   - [165.比较版本号 [Medium]](#165比较版本号-medium)
-  - [242. 有效的字母异位词](#242-有效的字母异位词)
 
 <!-- /code_chunk_output -->
 字符串问题花样繁多，面试题目难易差距显著，唯有多做多看掌握各种细节处理才能驾驭该类题目
@@ -386,28 +386,84 @@ public:
 };
 ```
 
-### 字符的有效异位符
-
-- 判断两个字符串是否为字符异位符  即字符分布相同，位置不同；
-- 对字符串进行排序，然后比较: 时间复杂度排序:O(nlogn)
-- 哈希表记录字符串内的数字分布情况，判断两个字符串是否相同： 时间复杂度O(n)
-
+### 49. 字母异位词组合
+> 给定一个字符串数组，将字母异位词组合在一起。字母异位词指字母相同，但排列不同的字符串
 
 ```
+输入: ["eat", "tea", "tan", "ate", "nat", "bat"]
+输出:
+[
+  ["ate","eat","tea"],
+  ["nat","tan"],
+  ["bat"]
+]
+```
+
+- 考察hash表的使用
+- **两个字符串互为字母异位词，当且仅当两个字符串包含的字母相同**。
+- 同一组字母异位词中的字符串具备相同点，可以使用相同点作为一组字母异位词的标志，使用哈希表存储每一组字母异位词，哈希表的键为一组字母异位词的标志，哈希表的值为一组字母异位词列表
+- 关键点： **`哈希表`**
+
+```c++
 class Solution {
 public:
-    bool isAnagram(string s, string t) {
-        sort(s.begin(),s.end());
-        sort(t.begin(),t.end());
-        if(s==t)
-        return true;
-        return false;
-
+    unordered_map<string, vector<int>> maps;
+    vector<vector<string>> groupAnagrams(vector<string>& strs) {
+        for (int i = 0; i < strs.size(); i++) {
+            string cur = strs[i];
+            sort(cur.begin(), cur.end());
+            if (!maps.count(cur)) {
+                vector<int> tmp;
+                tmp.push_back(i);
+                maps[cur] = tmp;
+            }
+            else {
+                maps[cur].push_back(i);
+            }
+        }
+        vector<vector<string>> ans;
+        for (unordered_map<string, vector<int>>::iterator iter = maps.begin(); iter != maps.end(); iter++) {
+            vector<string> tmp;
+            for (auto s : iter -> second) {
+                tmp.push_back(strs[s]);
+            }
+            ans.push_back(tmp);
+        }
+        return ans;
     }
 };
 ```
 
-```class Solution {
+###  242. 有效的字母异位词 
+> 给定两个字符串 s 和 t ，编写一个函数来判断 t 是否是 s 的字母异位词。
+
+- **排序或者哈希表**即可
+- 判断两个字符串是否为字符异位符  即字符分布相同，位置不同；
+- 对字符串进行排序，然后比较: 时间复杂度排序:O(nlogn)
+- 哈希表记录字符串内的数字分布情况，判断两个字符串是否相同： 时间复杂度O(n)
+
+```c++
+class Solution {
+public:
+    bool isAnagram(string s, string t) {
+        if (s.size() != t.size()) {
+            return false;
+        }
+        unordered_map<char, int> records;
+        sort(s.begin(), s.end());
+        sort(t.begin(), t.end());
+        for (int i = 0; i < s.size(); i++) {
+            if (s[i] != t[i])
+                return false;
+        }
+        return true;
+    }
+};
+```
+
+
+```c++
+class Solution {
 public:
     bool isAnagram(string s, string t) {
         if(s.length()!=t.length())
@@ -424,8 +480,6 @@ public:
              keys.erase(t[i]);
         }
         return true;
-        
-
     }
 };
 ```
@@ -829,49 +883,17 @@ public:
 
 
 
-### 49. 字母异位词组合
-- 考察hash表的使用
-- **两个字符串互为字母异位词，当且仅当两个字符串包含的字母相同**。同一组字母异位词中的字符串具备相同点，可以使用相同点作为一组字母异位词的标志，使用哈希表存储每一组字母异位词，哈希表的键为一组字母异位词的标志，哈希表的值为一组字母异位词列表
-
-```
-class Solution {
-public:
-    unordered_map<string, vector<int>> maps;
-    vector<vector<string>> groupAnagrams(vector<string>& strs) {
-        for (int i = 0; i < strs.size(); i++) {
-            string cur = strs[i];
-            sort(cur.begin(), cur.end());
-            if (!maps.count(cur)) {
-                vector<int> tmp;
-                tmp.push_back(i);
-                maps[cur] = tmp;
-            }
-            else {
-                maps[cur].push_back(i);
-            }
-        }
-        vector<vector<string>> ans;
-        for (unordered_map<string, vector<int>>::iterator iter = maps.begin(); iter != maps.end(); iter++) {
-            vector<string> tmp;
-            for (auto s : iter -> second) {
-                tmp.push_back(strs[s]);
-            }
-            ans.push_back(tmp);
-        }
-        return ans;
-    }
-};
-```
 
 
-### 3. 无重复字符的最长子串 [Medium] [Tencent]
+
+### 3. 无重复字符的最长子串 * [Medium] [Tencent/字节]
 - 双指针/滑动窗口策略
 - 仅遍历字符串一遍即可完成查找
   - 利用哈希表记录当前遍历字符，当出现重复字符时右指针停止遍历
   - 计算当前窗口大小，更新结果
   - 然后逐一移动左指针，将前一位结果从哈希表中移除，重复以上操作
   - 时间复杂度O(N) 空间复杂度O(N)
-```
+```c++
 class Solution {
 public:
     int lengthOfLongestSubstring(string s) {
@@ -896,7 +918,108 @@ public:
 };
 ```
 
+### 32. 最长有效括号
+> 给你一个只包含 '(' 和 ')' 的字符串，找出最长有效（格式正确且连续）括号子串的长度。
 
+```
+输入：s = "(()"
+输出：2
+解释：最长有效括号子串是 "()"
+```
+- 括号问题最自然的解法就是**通过栈来模拟整个过程**
+  - 为了计算有效括号的长度，利用栈**存储每个字符的下标**
+  - 栈顶维护当前**最后一个没有被匹配的右括号的下标**, 
+    - 遇到左括号进行入栈处理
+    - 每次遇到**右括号**时进行**出栈操作**，并更新结果，利用*当前下标-栈顶下标*
+- 时间复杂度 O(N) 空间复杂度 O(N)
+- 关键点： **`栈`**   **`双向遍历`**
+
+```c++
+class Solution {
+public:
+    int longestValidParentheses(string s) {
+        int ans = 0;
+        if (s.empty()) return 0;
+        stack<int> st;
+        st.push(-1);
+        int tmp = 0;
+        for (int i = 0; i < s.size(); i++) {
+            if (s[i] == '(') {
+                st.push(i);
+            }
+            else {
+                st.pop();
+                if (st.empty()) {
+                    st.push(i);
+                }
+                else {
+                    ans = max(ans, i - st.top());
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+- 更优的做法： **双向遍历方法**
+    - 基于贪心的思想，从左向右遍历，分别记录当前出现的**左右括号数量(left, right)**
+    - 当`left == right` 时 更新结果， 当`left < right`时重置left、right
+    - 从左向右的遍历过程中，无法考虑`left > right`的情况，因为本身向右遍历就会先出现左括号； 所以按照同样的逻辑**再从右向左遍历**
+- 时间复杂度 O(N) 空间复杂度 O(1)
+
+```c++
+class Solution {
+public:
+    int longestValidParentheses(string s) {
+        int n = s.size();
+        int ans = 0;
+        int left = 0, right = 0;
+        for (int i = 0; i < n; i++) {
+            if (s[i] == '(') left++;
+            else right++;
+            if (left == right) ans = max(ans, right * 2);
+            if (left < right) left = right = 0;
+        }
+        left = right = 0;
+        for (int i = n - 1; i >= 0; i--) {
+            if (s[i] == '(') left++;
+            else right++;
+            if (left == right) ans = max(ans, right * 2);
+            if (left > right) left = right = 0;
+        }
+        return ans;
+    }
+};
+```
+- **动态规划解法**：
+  - dp定义  `dp[i]`表示第i + 1个位置上的最大有效括号长度
+  - 如果dp[i-1] = '('  dp[i] = dp[i - 2] + 2
+  - 若为`)`, 则需要判断`s[i - dp[i-1] - 1] == '('`
+    - `dp[i] = dp[i-1] + 2 + dp[i - dp[i-1] - 2]` 需要考虑之前的状态,即`dp[i - dp[i-1] - 2]`
+- 时间复杂度  O(N) 空间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    int longestValidParentheses(string s) {
+        int n = s.size();
+        int ans = 0;
+        vector<int> dp(n, 0);
+        for (int i = 1; i < n; i++) {
+            if (s[i] == ')') {
+                if (s[i-1] == '(') {
+                    dp[i] = (i >= 2 ? dp[i - 2] : 0) + 2;
+                }
+                else if (i - dp[i - 1] > 0 && s[i - dp[i - 1] - 1] == '(') {
+                    dp[i] = dp[i - 1] + ( (i - dp[i - 1] >= 2) ? dp[i - dp[i - 1] - 2] : 0) + 2;
+                }
+                ans = max(ans, dp[i]);
+            }
+        }
+        return ans;
+    }
+};
+```
 
 ### 334. 递增的三元子序列 [Medium] 
 - 需要找出当前序列中的三个元素，满足递增性质
@@ -1214,26 +1337,4 @@ public:
 
 
 
-###  242. 有效的字母异位词 
-> 给定两个字符串 s 和 t ，编写一个函数来判断 t 是否是 s 的字母异位词。
 
-- 排序或者哈希表即可
-
-```
-class Solution {
-public:
-    bool isAnagram(string s, string t) {
-        if (s.size() != t.size()) {
-            return false;
-        }
-        unordered_map<char, int> records;
-        sort(s.begin(), s.end());
-        sort(t.begin(), t.end());
-        for (int i = 0; i < s.size(); i++) {
-            if (s[i] != t[i])
-                return false;
-        }
-        return true;
-    }
-};
-```
