--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -20,7 +20,8 @@
   - [83. 删除排序链表中的重复元素](#83-删除排序链表中的重复元素)
   - [82. 删除排序链表中的重复元素II **](#82-删除排序链表中的重复元素ii-)
   - [237. 删除链表指定节点](#237-删除链表指定节点)
-- [链表翻转操作](#链表翻转操作)
+- [链表翻转与旋转操作](#链表翻转与旋转操作)
+  - [61. 旋转链表](#61-旋转链表)
   - [206. 反转链表](#206-反转链表)
   - [局部反转： 反转链表前N个元素](#局部反转-反转链表前n个元素)
   - [局部反转：反转链表中第[m,n]个元素](#局部反转反转链表中第mn个元素)
@@ -581,9 +582,59 @@ public:
 ```
 
 
-## 链表翻转操作
+## 链表翻转与旋转操作
 
+### 61. 旋转链表 
+> 给你一个链表的头节点 head ，旋转链表，将链表**每个节点向右移动** k 个位置。
 
+```
+输入：head = [1,2,3,4,5], k = 2
+输出：[4,5,1,2,3]
+
+输入：head = [0,1,2], k = 4
+输出：[2,0,1]
+```
+- 思路也比较清晰
+  - 第一步： 可能存在循环旋转，所以要计算 `k%len` 得到真正需要移动的次数
+  - s2: 找到旋转后的头节点，可以通过快慢指针的方法，快指针先移动k，然后在快慢同步
+  - s3: 指针方向调整，遍历到链表尾部后，**将尾部指向原始的头部，并将slow的位置变成尾部，next指针设为null** *这块移动逻辑需要简单推理验证一下*
+- 关键点： **`双指针  链表长度`** 
+```c++
+class Solution {
+public:
+    ListNode* rotateRight(ListNode* head, int k) {
+        if (!head) return nullptr;
+        ListNode* slow = head;
+        ListNode* fast = head;
+        ListNode* prev = nullptr;
+        int len = 0;
+        int tmp = k;
+        // 统计链表长度
+        while (fast -> next) {
+            fast = fast -> next;
+            len++;
+        }
+        // 取模得到实际的移动次数
+        k = k % (len + 1);
+        fast = head;
+        // 快慢指针法 先往前移动k个位置， 然后在统一前进
+        while (k-- && fast) {
+            fast = fast -> next;
+        }
+        // 为了得到最后的指针，使用next判别
+        while (fast -> next) {
+            fast = fast -> next;
+            prev = slow;
+            slow = slow -> next;
+        }
+        // 连接头尾， 并将slow 尾指针指向空 
+        fast -> next = head;
+        prev = slow -> next;
+        slow -> next = nullptr;
+        return prev;
+    }
+};
+```
 ### 206. 反转链表
 > 输入一个链表的头节点，反转该链表并输出反转后链表的头节点。
 
@@ -598,7 +649,7 @@ public:
   - 时间复杂度O(n),空间复杂度O(1)
 - 关键点： **`一次遍历+双指针`**  **`递归解法`**
 
-```
+```c++
 class Solution {
 public:
     ListNode* reverseList(ListNode* head) {
