--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -2,6 +2,7 @@
   - [9. 回文数](#9-回文数)
   - [54. 螺旋数组](#54-螺旋数组)
   - [59. 螺旋矩阵 II](#59-螺旋矩阵-ii)
+  - [剑指offer 61. 扑克牌中的顺子](#剑指offer-61-扑克牌中的顺子)
   - [66.加一](#66加一)
   - [118. 杨辉三角](#118-杨辉三角)
   - [498. 对角线遍历](#498-对角线遍历)
@@ -11,8 +12,9 @@
 - [位运算技巧](#位运算技巧)
   - [136. 只出现一次的数字](#136-只出现一次的数字)
   - [137. 只出现过一次的数字](#137-只出现过一次的数字)
-  - [191. 位1的个数](#191-位1的个数)
   - [260. 只出现过一次的数字 II](#260-只出现过一次的数字-ii)
+  - [191. 位1的个数](#191-位1的个数)
+  - [231. 2的幂](#231-2的幂)
   - [268. 缺失的数字](#268-缺失的数字)
 - [双指针技巧](#双指针技巧)
   - [26. 删除有序数组中的重复项](#26-删除有序数组中的重复项)
@@ -142,6 +144,49 @@ public:
             col_l++;
         }
         return target;
+    }
+};
+```
+
+### 剑指offer 61. 扑克牌中的顺子
+> 从扑克牌中随机抽5张牌，判断是不是一个顺子，即这5张牌是不是连续的。2～10为数字本身，A为1，J为11，Q为12，K为13，而大、小王为 0 ，可以看成任意数字。A 不能视为 14。
+
+```
+输入: [0,0,1,2,5]
+输出: True
+```
+
+- 梳理一下题目，本质上是在找**有序数组中空缺的连续值的个数**，`2 3 5`之间缺了4，即缺了1个数， `nums[i+1] - nums[i] - 1`
+- 并确定共有多有个0，0的个数要等于/大于比缺失的数量
+- 首先进行数组排序，然后进行差值计算即可
+  - 特殊情况： 当**有重复元素时一定不满足条件**
+
+- 关键点： **`有序数组 空缺数量`**
+
+``` c++
+class Solution {
+public:
+    bool isStraight(vector<int>& nums) {
+        int z = 0;
+        int num = 0;
+        bool flag = false;
+        int res = 0;
+        sort(nums.begin(), nums.end());
+        for (int i = 0; i < nums.size(); i++) {
+            if (nums[i] == 0)
+                z++;
+            else {
+                if (flag)  {
+                    if (nums[i] == num) return false;
+                    res += (nums[i] - num - 1);
+                }
+                num = nums[i];
+                flag = true;  
+            }
+        }
+        if (res <= z)
+            return true;
+        return false;
     }
 };
 ```
@@ -449,26 +494,6 @@ public:
 };
 ```
 
-### 191. 位1的个数
->  输入是一个无符号整数（以二进制串的形式），返回其二进制表达式中数字位数为 '1' 的个数（也被称为汉明重量）
-
-
-```
-class Solution {
-public:
-    int hammingWeight(uint32_t n) {
-       int ans = 0;
-       int l = 0;
-       while (l < 32) {
-           if(n & (1 << l))
-                ans++;
-           l++;
-       } 
-       return ans;
-    }
-};
-```
-
 ### 260. 只出现过一次的数字 II 
 
 > 给定一个整数数组 nums，其中**恰好有两个元素只出现一次**，**其余所有元素均出现两次**。 找出只出现一次的那两个元素。你可以按 任意顺序 返回答案。
@@ -512,6 +537,70 @@ public:
     }
 };
 ```
+
+### 191. 位1的个数
+>  输入是一个无符号整数（以二进制串的形式），返回其二进制表达式中数字位数为 '1' 的个数（也被称为汉明重量）
+
+
+```
+class Solution {
+public:
+    int hammingWeight(uint32_t n) {
+       int ans = 0;
+       int l = 0;
+       while (l < 32) {
+           if(n & (1 << l))
+                ans++;
+           l++;
+       } 
+       return ans;
+    }
+};
+```
+
+### 231. 2的幂
+
+> 给定一个整数，编写一个函数来判断它是否是 2 的幂次方
+
+- 最容易想到的： 二分查找， 时间复杂度 O(logN)
+```c++
+class Solution {
+public:
+    bool isPowerOfTwo(int n) {
+        int right = n / 2;
+        int left = 0;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (pow(2, mid) == n)  
+                return true;
+            if (pow(2, mid) < n) {
+                left = mid + 1;
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        return false;
+    }
+};
+```
+- 然而该题更多考察的是**位运算技巧**
+    - 幂的二进制表示中仅有一个1，x - 1 则可以得到二进制各位全为1的表示
+    - 因此可以计算 `x & (x - 1)` 交运算直接得到结果
+    - **为了避免溢出 ：使用 long**
+- 时间复杂度 O(1)
+
+```
+class Solution {
+public:
+    bool isPowerOfTwo(int n) {
+        if (n == 0) return false;
+        long x = n;
+        return (x & (x - 1)) == 0; 
+    }
+};
+```
+
 ### 268. 缺失的数字
 > 给定一个包含 [0, n] 中 n 个数的数组 nums ，找出 [0, n] 这个范围内没有出现在数组中的那个数。
 
