--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -19,12 +19,13 @@
   - [125. 回文串验证](#125-回文串验证)
   - [516. 最长回文子序列](#516-最长回文子序列)
 - [字符串转换问题](#字符串转换问题)
-  - [8.字符串转换整数 (atoi) Mid](#8字符串转换整数-atoi-mid)
-  - [8. 实现strStr() 子串匹配查找 ***](#8-实现strstr-子串匹配查找-)
-  - [3. 无重复字符的最长子串 * [Medium] [Tencent/字节]](#3-无重复字符的最长子串--medium-tencent字节)
-  - [32. 最长有效括号](#32-最长有效括号)
+  - [8.字符串转换整数 (atoi) Mid *](#8字符串转换整数-atoi-mid)
+  - [28. 实现strStr() 子串匹配查找 *](#28-实现strstr-子串匹配查找)
+- [综合问题](#综合问题)
+  - [3. 无重复字符的最长子串 * [Medium] [Tencent/字节]](#3-无重复字符的最长子串-medium-tencent字节)
   - [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
-  - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
+  - [32. 最长有效括号](#32-最长有效括号)
+  - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard)
   - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
   - [补充. 01串问题](#补充-01串问题)
@@ -682,7 +683,7 @@ public:
 需要考虑比较多的边界问题， 多看几遍即可掌握  
 
 
-### 8.字符串转换整数 (atoi) Mid
+### 8.字符串转换整数 (atoi) Mid *
 
 
 - 题中有较多边界条件
@@ -786,7 +787,7 @@ public:
     }
 };
 ```
-### 8. 实现strStr() 子串匹配查找 ***
+### 28. 实现strStr() 子串匹配查找 *
 
 - KMP查找算法，定义最大相同前后缀长度，计算子串各位置的最大前缀长度，当出现不匹配时根据最大前缀长度进行回退 时间复杂度(O(N))
 - 常见面试题，需要深入了解并记住该原理，可以动态规划求解：前缀是指不包含最后一个字符的所有以第一个字符开头的连续子串；后缀是指不包含第一个字符的所有以最后一个字符结尾的连续子串
@@ -883,7 +884,7 @@ public:
 
 
 
-
+## 综合问题
 
 
 ### 3. 无重复字符的最长子串 * [Medium] [Tencent/字节]
@@ -918,6 +919,35 @@ public:
 };
 ```
 
+### 334. 递增的三元子序列 [Medium] 
+- 需要找出当前序列中的三个元素，满足递增性质
+- 在遍历中存储top2值，来完成三元自序列的判断
+- 即存在两级对比，时间复杂度 O(N)
+  - 若是4元子序列呢？三次对比？
+```
+class Solution {
+public:
+    bool increasingTriplet(vector<int>& nums) {
+        int min = INT_MAX;
+        int big = INT_MAX;
+        // 两级对比
+        for (int i = 0; i < nums.size(); i++) {
+            if (nums[i] > big) {
+                return true;
+            }
+            else if (nums[i] > min) {
+                big = nums[i]; 
+            }
+            else {
+                min = nums[i];
+            }
+        }
+        return false;
+
+    }
+};
+```
+
 ### 32. 最长有效括号
 > 给你一个只包含 '(' 和 ')' 的字符串，找出最长有效（格式正确且连续）括号子串的长度。
 
@@ -932,7 +962,7 @@ public:
     - 遇到左括号进行入栈处理
     - 每次遇到**右括号**时进行**出栈操作**，并更新结果，利用*当前下标-栈顶下标*
 - 时间复杂度 O(N) 空间复杂度 O(N)
-- 关键点： **`栈`**   **`双向遍历`**
+- 关键点： **`栈`**   **`双向遍历`**  **`存储下标`**
 
 ```c++
 class Solution {
@@ -1021,40 +1051,13 @@ public:
 };
 ```
 
-### 334. 递增的三元子序列 [Medium] 
-- 需要找出当前序列中的三个元素，满足递增性质
-- 在遍历中存储top2值，来完成三元自序列的判断
-- 即存在两级对比，时间复杂度 O(N)
-  - 若是4元子序列呢？三次对比？
-```
-class Solution {
-public:
-    bool increasingTriplet(vector<int>& nums) {
-        int min = INT_MAX;
-        int big = INT_MAX;
-        // 两级对比
-        for (int i = 0; i < nums.size(); i++) {
-            if (nums[i] > big) {
-                return true;
-            }
-            else if (nums[i] > min) {
-                big = nums[i]; 
-            }
-            else {
-                min = nums[i];
-            }
-        }
-        return false;
-
-    }
-};
-```
 ### 224. 基础计算器 [Hard] ***
 - 实现具有加减功能的计算器，考虑`+-` `()`括号的影响
 - **基于栈的结构进行实现**
 - 逻辑上，加减需要记录其对应的符号即可
 - 其他复杂的部分在括号的处理，在进入括号时需要利用栈保存之前的数据状态，**包括sign和结果，并重置目前状态**
   - 最后遇到右括号时，进行出栈操作，进行结果恢复和更新
+- 关键点： **`栈结构`**
   
 ```
 class Solution {
@@ -1218,12 +1221,21 @@ public:
 ```
 
 ### 402. 移除K个字符 [Medium]
-- 单调栈做法
+> 给定一个以字符串表示的非负整数 num，移除这个数中的 k 位数字，使得剩下的数字最小。
+
+```
+输入: num = "1432219", k = 3
+输出: "1219"
+解释: 移除掉三个数字 4, 3, 和 2 形成一个新的最小的数字 1219
+```
+
+- **单调栈做法**
 - 解题模板：https://leetcode-cn.com/problems/remove-k-digits/solution/yi-zhao-chi-bian-li-kou-si-dao-ti-ma-ma-zai-ye-b-5/
   - 从左到右遍历，对于每一个遍历到的元素，我们决定是丢弃还是保留
   - 丢弃相邻位置上大的元素，使用单调递增栈进行数据组织
 - 时间复杂度O(N) 
-- 最后处理临界情况： 当全部字符都被移除的情况； 计算剩余字符串长度，从栈中取出
+- 最后**处理临界情况**： 当全部字符都被移除的情况； 计算剩余字符串长度，从栈中取出
+- 关键点： **`单调栈构造`**
 ```
 class Solution {
 public:
