--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -17,11 +17,14 @@
   - [231. 2的幂](#231-2的幂)
   - [268. 缺失的数字](#268-缺失的数字)
 - [双指针技巧](#双指针技巧)
+  - [11. 盛最多水的容器](#11-盛最多水的容器)
+  - [15. 三数之和 3Sum [Medium]](#15-三数之和-3sum-medium)
+  - [16. 最接近的三数之和](#16-最接近的三数之和)
+  - [18. 四数之和](#18-四数之和)
   - [26. 删除有序数组中的重复项](#26-删除有序数组中的重复项)
   - [75. 颜色分类 [Medium]](#75-颜色分类-medium)
   - [剑指21. 调整数组顺序使奇数位于偶数前面](#剑指21-调整数组顺序使奇数位于偶数前面)
   - [283. 移动零](#283-移动零)
-  - [15. 3Sum [Medium]](#15-3sum-medium)
   - [88. 合并两个有序数组](#88-合并两个有序数组)
   - [350. 两个数组的交集2](#350-两个数组的交集2)
 - [哈希表技巧](#哈希表技巧)
@@ -670,6 +673,232 @@ public:
 ```
 ## 双指针技巧
 
+1. 两数之和 
+
+-  **排序+双指针， 最简单的解法**
+```c++
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& numbers, int target) {
+        int left = 0;
+        int right = numbers.size()-1;
+        vector<int> res;
+        while(left < right) {
+            if (numbers[left] + numbers[right] < target) {
+                left++;
+            }
+            else if (numbers[left] + numbers[right] > target) {
+                right--;
+            }
+            else {
+                res.push_back(left+1);
+                res.push_back(right+1);
+                return res;
+            }
+        }
+        return res;
+    }
+};
+```
+
+### 11. 盛最多水的容器
+> 给你 n 个非负整数 a1，a2，...，an，每个数代表坐标中的一个点 (i, ai) 。在坐标内画 n 条垂直线，垂直线 i 的两个端点分别为 (i, ai) 和 (i, 0) 。**找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水**
+
+```
+输入：[1,8,6,2,5,4,8,3,7]
+输出：49 
+```
+
+- 本质上是在找面积最大的区间，经典的**双指针题目**
+- 左右指针**从两侧向内搜索**
+  - 终止条件： `left < right`
+  - 当`h[l] < h[r]`时右移左指针，**总是移动矮指针，漏桶原理嘛**
+  - 当`h[l] > h[r]`时左移右指针
+  - 每次先更新面积结果，然后再移动指针
+- 时间复杂度 O(N)
+
+- 关键点： 优美的 **`双指针`**
+
+
+
+```c++
+class Solution {
+public:
+    int maxArea(vector<int>& height) {
+        int left = 0, right = height.size() - 1;
+        int ans = 0;
+        while (left < right) {
+            ans = max(ans, (right - left) * min (height[left], height[right]));
+            if (height[left] < height[right]) {
+                left++;
+            }
+            else {
+                right--;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+### 15. 三数之和 3Sum [Medium]
+> 从无序数组中找出三个非重复元素和等于目标值
+
+- **TwoSum的升级** 
+- 可以通过多次TwoSum查找来实现3Sum的计算
+    - **为了避免重复**，需要在遍历时跳过重复区域
+    - 外层循环和内层循环都需要进行重复区域的跳过
+- 时间复杂度 `O(N^2)` 空间复杂度 O(logN) 排序所需
+- 关键点： **`双指针 `**   **`避免重复`** 
+```
+class Solution {
+public:
+    vector<vector<int>> ans;
+    void twoSum(vector<int>& nums, int target, int index) {
+        int left = index + 1;
+        int right = nums.size() - 1;
+        while(left < right) {
+            if (nums[left] + nums[right] == target) {
+                if (left != index && right != index) {
+                    ans.push_back({nums[index], nums[left], nums[right]});
+                    //cout << nums[index] <<" " <<nums[left] << " "<< nums[right] << endl;
+                }
+                int cur = nums[left];
+                while(left < nums.size() && nums[left]==cur) {
+                    left++;
+                }
+                //cout << "move:" << left << " " << nums[left]<< endl;
+                int curr = nums[right];
+                while(right >= 0 && nums[right]==curr) {
+                    right--;
+                }
+                //cout << "right:" << right << " " << nums[right]<< endl;
+                continue;
+                //left++;
+            }
+            else if(nums[left] + nums[right] < target) {
+                left++;
+            }
+            else {
+                right--;
+            }
+        }
+    }
+    vector<vector<int>> threeSum(vector<int>& nums) {
+        if (nums.size() < 3) {
+            return ans;
+        }
+        sort(nums.begin(), nums.end()); //排序
+        int i = 0;
+        while (i < nums.size()) {
+            if (nums[i] > 0)
+                break;
+            twoSum(nums, -nums[i], i);
+            int cur = nums[i];
+            while(i < nums.size() && nums[i]==cur) {
+                    i++;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+### 16. 最接近的三数之和
+> 给定一个包括 n 个整数的数组 nums 和 一个目标值 target。找出 nums 中的三个整数，使得它们的和与 target 最接近。返回这三个数的和。假定每组输入只存在唯一答案。
+
+```
+输入：nums = [-1,2,1,-4], target = 1
+输出：2
+```
+
+- 与三数之和解法一致，只是调整了对于相等情况的处理，每次遍历通过比较绝对值差来更新结果
+- 时间复杂度 O(N^2)
+- 关键点： **`排序 + 双指针`**
+
+```c++
+class Solution {
+public:
+    int threeSumClosest(vector<int>& nums, int target) {
+        sort(nums.begin(), nums.end());
+        int n = nums.size();
+        int ans = 100000;
+        for (int i = 0; i < n - 2; i++) {
+            int left = i + 1;
+            int right = n - 1;
+            while (left < right) {
+                int tmp = nums[i] + nums[left] + nums[right];
+                if (tmp <= target) {
+                    left++;
+                }
+                else {
+                    right--;
+                }
+                if (abs(tmp - target) <= abs(ans - target)) 
+                    ans = tmp;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+### 18. 四数之和
+> 给定一个包含 n 个整数的数组 nums 和一个目标值 target，判断 nums 中是否存在四个元素 a，b，c 和 d ，使得 a + b + c + d 的值与 target 相等？找出所有满足条件且不重复的四元组。注意：答案中不可以包含重复的四元组
+
+- 与三数之和原理一致，通过**多层循环+排序双指针即可**
+- 区别在于比三数之和多一层循环，多一层重复判断
+- 关键点： **`重复值判断`**  **`排序 + 双指针`**
+
+``` c++
+class Solution {
+public:
+    vector<vector<int>> fourSum(vector<int>& nums, int target) {
+        sort(nums.begin(), nums.end());
+        int n = nums.size();
+        vector<vector<int>> ans;
+        for (int i = 0; i < n - 3; i++) {
+            // 重复值处理
+            if (i > 0 && nums[i] == nums[i - 1]) {
+                continue;
+            }
+            for (int j = i + 1; j < n - 2; j++) {
+                // 重复值处理
+                if (j > i + 1 && nums[j] == nums[j - 1])
+                    continue;
+                
+                int left = j + 1;
+                int right = n - 1;
+                while (left < right) {
+                    
+                    int tmp = nums[i] + nums[j] + nums[left] + nums[right];
+                    if (tmp == target) {
+                        //cout <<i << j<< left << right << endl;
+                        ans.push_back(vector<int>{nums[i], nums[j], nums[left], nums[right]});
+                        int l = nums[left];
+                        // 重复值处理
+                        while (left < right && nums[left] == l)
+                            left++;
+                        int r = nums[right];
+                        while ( right >= 0 && nums[right] == r)
+                            right--;
+                    }
+                    else if (tmp < target) {
+                        left++;
+                    }
+                    else {
+                        right--;
+                    }
+                }     
+               
+            }
+            
+        }
+        return ans;
+    }
+};
+```
+
 ### 26. 删除有序数组中的重复项
 > 给你一个有序数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度
 
@@ -780,66 +1009,6 @@ public:
 };
 ```
 
-### 15. 3Sum [Medium]
-- 从无序数组中找出三个非重复元素和等于目标值
-- TwoSum的升级
-- 可以通过多次TwoSum查找来实现3Sum的计算
-    - 为了避免重复，需要在遍历时跳过重复区域
-    - 外层循环和内层循环都需要进行重复区域的跳过
-- 时间复杂度 `O(N^2)` 空间复杂度 O(logN) 排序所需
-```
-class Solution {
-public:
-    vector<vector<int>> ans;
-    void twoSum(vector<int>& nums, int target, int index) {
-        int left = index + 1;
-        int right = nums.size() - 1;
-        while(left < right) {
-            if (nums[left] + nums[right] == target) {
-                if (left != index && right != index) {
-                    ans.push_back({nums[index], nums[left], nums[right]});
-                    //cout << nums[index] <<" " <<nums[left] << " "<< nums[right] << endl;
-                }
-                int cur = nums[left];
-                while(left < nums.size() && nums[left]==cur) {
-                    left++;
-                }
-                //cout << "move:" << left << " " << nums[left]<< endl;
-                int curr = nums[right];
-                while(right >= 0 && nums[right]==curr) {
-                    right--;
-                }
-                //cout << "right:" << right << " " << nums[right]<< endl;
-                continue;
-                //left++;
-            }
-            else if(nums[left] + nums[right] < target) {
-                left++;
-            }
-            else {
-                right--;
-            }
-        }
-    }
-    vector<vector<int>> threeSum(vector<int>& nums) {
-        if (nums.size() < 3) {
-            return ans;
-        }
-        sort(nums.begin(), nums.end()); //排序
-        int i = 0;
-        while (i < nums.size()) {
-            if (nums[i] > 0)
-                break;
-            twoSum(nums, -nums[i], i);
-            int cur = nums[i];
-            while(i < nums.size() && nums[i]==cur) {
-                    i++;
-            }
-        }
-        return ans;
-    }
-};
-```
 
 ### 88. 合并两个有序数组
 - 给定两个有序数组a,b， 其中a数组空间比较大，可以容纳a+b两个数组
@@ -953,6 +1122,7 @@ public:
 - 暴力搜索
 - 哈希表：在数组线性遍历时，记录每个值的位置，以便于快速查找差值target-x是否存在。 
     时间复杂度：O(n)
+- 关键点： **`哈希表`**   **`双指针`**
 
 ```
 class Solution {
@@ -972,6 +1142,77 @@ public:
     }
 };
 ```
+
+- **如果是有序数组的话，可以使用二分法和双指针**
+- 给定两数之和，找出数组中对应的两个数的索引
+- 思路1： 双指针法：
+    - 设定左右指针，比较两数之和与target的差距，进行左右指针的调整
+    - 时间复杂度： O(N)
+    - 方法合理性的相关解释：
+> 假设 `\text{numbers}[i]+\text{numbers}[j]=\text{target}numbers[i]+numbers[j]=target` 是唯一解，其中 `0 \leq i<j \leq \text{numbers.length}-10≤i<j≤numbers.length−1`。初始时两个指针分别指向下标 00 和下标 \text{numbers.length}-1numbers.length−1，左指针指向的下标小于或等于 `i`，右指针指向的下标大于或等于 `j`。除非初始时左指针和右指针已经位于下标 `i` 和 `j`，否则一定是左指针先到达下标 `i`的位置或者右指针先到达下标 `j` 的位置。
+> **如果左指针先到达下标 `i` 的位置，此时右指针还在下标 `j`的右侧，`\text{sum}>\text{target}sum>target`，因此一定是右指针左移，左指针不可能移到 `i` 的右侧**。
+> 如果右指针先到达下标 jj 的位置，此时左指针还在下标 `i` 的左侧，`\text{sum}<\text{target}sum<target`，因此一定是左指针右移，右指针不可能移到 `j` 的左侧。
+> 由此可见，在整个移动过程中，左指针不可能移到 `i` 的右侧，右指针不可能移到 `j` 的左侧，因此不会把可能的解过滤掉。由于题目确保有唯一的答案，因此使用双指针一定可以找到答案
+
+```c++
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& numbers, int target) {
+        int left = 0;
+        int right = numbers.size()-1;
+        vector<int> res;
+        while(left < right) {
+            if (numbers[left] + numbers[right] < target) {
+                left++;
+            }
+            else if (numbers[left] + numbers[right] > target) {
+                right--;
+            }
+            else {
+                res.push_back(left+1);
+                res.push_back(right+1);
+                return res;
+            }
+        }
+        return res;
+    }
+};
+```
+
+- 思路2： 基于二分查找
+    - 给定第一个数，寻找第二个数是否存在是最朴素的思路
+    - 利用二分查找来寻找target-i能够避免 `O(n^2)`的复杂度
+    - 时间复杂度 ： `O(nlogn)`
+```c++
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& numbers, int target) {     
+        vector<int> res;
+        for (int i = 0; i < numbers.size()-1; i++) {
+            int left = i+1;
+            int right = numbers.size() - 1;
+            int t = target - numbers[i];
+            while (left <= right) {
+                int mid = left + (right - left)/2;
+                if (numbers[mid] == t) {
+                    res.push_back(i+1);
+                    res.push_back(mid+1);
+                    return res;
+                }
+                else if (numbers[mid] < t) {
+                    left = mid + 1;
+                }
+                else {
+                    right = mid - 1;
+                }
+            }
+        }
+        return res;
+    }
+};
+```
+
+
 
 ### 36. 有效的数独
 ```
