--- a/图.md
+++ b/图.md
@@ -3,7 +3,11 @@
 
 有向图
 
-[TOC]
+- [拓扑排序](#拓扑排序)
+  - [原理与应用](#原理与应用)
+  - [实现](#实现)
+- [207. 课程表 [Medium]](#207-课程表-medium)
+- [210. 课程表 II](#210-课程表-ii)
 ### 拓扑排序
 - 将一个**有向无环图**(Directed Acyclic Graph简称DAG)进行排序进而得到**一个有序的线性序列**
 
